--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8b760138",
+   "metadata": {},
+   "source": [
+    "I forhold til utdyping av forklaring av kode, samt valg av metodik så legger jeg en markdown seksjon under den akkutelle kode seksjonen, i noen tillfeller vi også denne kunne forklare flere ovenforliggende kode seksjoner der hvor det er mest hensiksmessig."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 89,
    "id": "fbd3f84e",
    "metadata": {},
    "outputs": [],
@@ -17,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 90,
    "id": "73dedc1a",
    "metadata": {},
    "outputs": [
@@ -108,7 +116,7 @@
        "[1 rows x 32 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 91,
    "id": "cd6945e6",
    "metadata": {},
    "outputs": [
@@ -410,7 +418,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 92,
    "id": "b55411b9",
    "metadata": {},
    "outputs": [],
@@ -450,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 93,
    "id": "da9e5e94",
    "metadata": {},
    "outputs": [],
@@ -501,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 94,
    "id": "15413364",
    "metadata": {},
    "outputs": [],
@@ -590,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 95,
    "id": "74c20907",
    "metadata": {},
    "outputs": [
@@ -605,8 +613,50 @@
       "F1: 1.00\n",
       "ROCAUC: 1.00\n",
       "Validation results:\n",
-      "Accuracy: 0.92\n",
+      "Accuracy: 0.93\n",
       "Precision: 0.89\n",
+      "Recall: 0.92\n",
+      "F1: 0.90\n",
+      "ROCAUC: 0.93\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt1 = DecisionTreeClassifier()\n",
+    "validate(dt1, 20)\n",
+    "\n",
+    "\n",
+    "#DecisionTreeClassifier(max_depth=7, min_samples_split=5, min_samples_leaf=2, min_weight_fraction_leaf=0.05, max_leaf_nodes=12, class_weight='balanced')\n",
+    "#ccp_alpha=0.015\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4552dc2",
+   "metadata": {},
+   "source": [
+    "Først kjøring av validering for DecisionTreeClassifier modellen for å sette en baseline å jobbe ut i fra."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "b2f7981e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training results:\n",
+      "Accuracy: 0.98\n",
+      "Precision: 0.98\n",
+      "Recall: 0.96\n",
+      "F1: 0.97\n",
+      "ROCAUC: 0.97\n",
+      "Validation results:\n",
+      "Accuracy: 0.92\n",
+      "Precision: 0.91\n",
       "Recall: 0.88\n",
       "F1: 0.89\n",
       "ROCAUC: 0.91\n"
@@ -614,13 +664,128 @@
     }
    ],
    "source": [
-    "\n",
-    "dt1 = DecisionTreeClassifier()\n",
-    "validate(dt1, 20)\n",
-    "\n",
-    "\n",
-    "#DecisionTreeClassifier(max_depth=7, min_samples_split=5, min_samples_leaf=2, min_weight_fraction_leaf=0.05, max_leaf_nodes=12, class_weight='balanced')\n",
-    "#ccp_alpha=0.015\n"
+    "dt11 = DecisionTreeClassifier(max_depth=3)\n",
+    "validate(dt11, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "cb9f3676",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training results:\n",
+      "Accuracy: 0.99\n",
+      "Precision: 0.99\n",
+      "Recall: 0.97\n",
+      "F1: 0.98\n",
+      "ROCAUC: 0.99\n",
+      "Validation results:\n",
+      "Accuracy: 0.92\n",
+      "Precision: 0.92\n",
+      "Recall: 0.87\n",
+      "F1: 0.89\n",
+      "ROCAUC: 0.91\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt12 = DecisionTreeClassifier(max_depth=4)\n",
+    "validate(dt12, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "53b16242",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training results:\n",
+      "Accuracy: 0.99\n",
+      "Precision: 1.00\n",
+      "Recall: 0.99\n",
+      "F1: 0.99\n",
+      "ROCAUC: 0.99\n",
+      "Validation results:\n",
+      "Accuracy: 0.93\n",
+      "Precision: 0.90\n",
+      "Recall: 0.90\n",
+      "F1: 0.90\n",
+      "ROCAUC: 0.92\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt13 = DecisionTreeClassifier(max_depth=5)\n",
+    "validate(dt13, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "888a67f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training results:\n",
+      "Accuracy: 1.00\n",
+      "Precision: 1.00\n",
+      "Recall: 1.00\n",
+      "F1: 1.00\n",
+      "ROCAUC: 1.00\n",
+      "Validation results:\n",
+      "Accuracy: 0.93\n",
+      "Precision: 0.91\n",
+      "Recall: 0.90\n",
+      "F1: 0.91\n",
+      "ROCAUC: 0.92\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt14 = DecisionTreeClassifier(max_depth=6)\n",
+    "validate(dt14, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "09e96b1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training results:\n",
+      "Accuracy: 1.00\n",
+      "Precision: 1.00\n",
+      "Recall: 1.00\n",
+      "F1: 1.00\n",
+      "ROCAUC: 1.00\n",
+      "Validation results:\n",
+      "Accuracy: 0.92\n",
+      "Precision: 0.91\n",
+      "Recall: 0.89\n",
+      "F1: 0.90\n",
+      "ROCAUC: 0.92\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt15 = DecisionTreeClassifier(max_depth=7)\n",
+    "validate(dt15, 20)"
    ]
   },
   {
@@ -633,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 101,
    "id": "c3433440",
    "metadata": {},
    "outputs": [
@@ -649,8 +814,8 @@
       "ROCAUC: 0.93\n",
       "Validation results:\n",
       "Accuracy: 0.94\n",
-      "Precision: 0.93\n",
-      "Recall: 0.90\n",
+      "Precision: 0.95\n",
+      "Recall: 0.89\n",
       "F1: 0.91\n",
       "ROCAUC: 0.93\n"
      ]
@@ -663,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 102,
    "id": "3658d3a4",
    "metadata": {},
    "outputs": [
@@ -678,10 +843,10 @@
       "F1: 0.91\n",
       "ROCAUC: 0.92\n",
       "Validation results:\n",
-      "Accuracy: 0.93\n",
+      "Accuracy: 0.94\n",
       "Precision: 0.96\n",
-      "Recall: 0.85\n",
-      "F1: 0.90\n",
+      "Recall: 0.87\n",
+      "F1: 0.91\n",
       "ROCAUC: 0.92\n"
      ]
     }
@@ -693,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 103,
    "id": "f8328f8f",
    "metadata": {},
    "outputs": [
@@ -709,9 +874,9 @@
       "ROCAUC: 0.91\n",
       "Validation results:\n",
       "Accuracy: 0.93\n",
-      "Precision: 0.97\n",
+      "Precision: 0.98\n",
       "Recall: 0.83\n",
-      "F1: 0.89\n",
+      "F1: 0.90\n",
       "ROCAUC: 0.91\n"
      ]
     }
@@ -723,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 104,
    "id": "91fed950",
    "metadata": {},
    "outputs": [
@@ -740,8 +905,8 @@
       "Validation results:\n",
       "Accuracy: 0.94\n",
       "Precision: 0.93\n",
-      "Recall: 0.90\n",
-      "F1: 0.91\n",
+      "Recall: 0.91\n",
+      "F1: 0.92\n",
       "ROCAUC: 0.93\n"
      ]
     }
@@ -753,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 105,
    "id": "88dc8fca",
    "metadata": {},
    "outputs": [
@@ -763,16 +928,16 @@
      "text": [
       "Training results:\n",
       "Accuracy: 0.94\n",
-      "Precision: 0.93\n",
-      "Recall: 0.90\n",
+      "Precision: 0.94\n",
+      "Recall: 0.89\n",
       "F1: 0.91\n",
       "ROCAUC: 0.93\n",
       "Validation results:\n",
       "Accuracy: 0.94\n",
-      "Precision: 0.92\n",
-      "Recall: 0.91\n",
-      "F1: 0.91\n",
-      "ROCAUC: 0.93\n"
+      "Precision: 0.93\n",
+      "Recall: 0.92\n",
+      "F1: 0.92\n",
+      "ROCAUC: 0.94\n"
      ]
     }
    ],
