--- a/Oblig1/realestate.ipynb
+++ b/Oblig1/realestate.ipynb
@@ -109,31 +109,256 @@
        "      <td>121.54245</td>\n",
        "      <td>43.1</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2012.666667</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>2175.03000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>24.96305</td>\n",
+       "      <td>121.51254</td>\n",
+       "      <td>32.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2012.666667</td>\n",
+       "      <td>34.5</td>\n",
+       "      <td>623.47310</td>\n",
+       "      <td>7</td>\n",
+       "      <td>24.97933</td>\n",
+       "      <td>121.53642</td>\n",
+       "      <td>40.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2013.416667</td>\n",
+       "      <td>20.3</td>\n",
+       "      <td>287.60250</td>\n",
+       "      <td>6</td>\n",
+       "      <td>24.98042</td>\n",
+       "      <td>121.54228</td>\n",
+       "      <td>46.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2013.500000</td>\n",
+       "      <td>31.7</td>\n",
+       "      <td>5512.03800</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24.95095</td>\n",
+       "      <td>121.48458</td>\n",
+       "      <td>18.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2013.416667</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>1783.18000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>24.96731</td>\n",
+       "      <td>121.51486</td>\n",
+       "      <td>22.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2013.083333</td>\n",
+       "      <td>34.8</td>\n",
+       "      <td>405.21340</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24.97349</td>\n",
+       "      <td>121.53372</td>\n",
+       "      <td>41.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>11</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2013.333333</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>90.45606</td>\n",
+       "      <td>9</td>\n",
+       "      <td>24.97433</td>\n",
+       "      <td>121.54310</td>\n",
+       "      <td>58.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2012.916667</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>492.23130</td>\n",
+       "      <td>5</td>\n",
+       "      <td>24.96515</td>\n",
+       "      <td>121.53737</td>\n",
+       "      <td>39.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2012.666667</td>\n",
+       "      <td>20.4</td>\n",
+       "      <td>2469.64500</td>\n",
+       "      <td>4</td>\n",
+       "      <td>24.96108</td>\n",
+       "      <td>121.51046</td>\n",
+       "      <td>23.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>14</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2013.500000</td>\n",
+       "      <td>13.2</td>\n",
+       "      <td>1164.83800</td>\n",
+       "      <td>4</td>\n",
+       "      <td>24.99156</td>\n",
+       "      <td>121.53406</td>\n",
+       "      <td>34.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>15</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2013.583333</td>\n",
+       "      <td>35.7</td>\n",
+       "      <td>579.20830</td>\n",
+       "      <td>2</td>\n",
+       "      <td>24.98240</td>\n",
+       "      <td>121.54619</td>\n",
+       "      <td>50.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2013.250000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>292.99780</td>\n",
+       "      <td>6</td>\n",
+       "      <td>24.97744</td>\n",
+       "      <td>121.54458</td>\n",
+       "      <td>70.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>17</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2012.750000</td>\n",
+       "      <td>17.7</td>\n",
+       "      <td>350.85150</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24.97544</td>\n",
+       "      <td>121.53119</td>\n",
+       "      <td>37.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>18</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2013.416667</td>\n",
+       "      <td>16.9</td>\n",
+       "      <td>368.13630</td>\n",
+       "      <td>8</td>\n",
+       "      <td>24.96750</td>\n",
+       "      <td>121.54451</td>\n",
+       "      <td>42.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>19</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2012.666667</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>23.38284</td>\n",
+       "      <td>7</td>\n",
+       "      <td>24.96772</td>\n",
+       "      <td>121.54102</td>\n",
+       "      <td>47.7</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  No  X1 transaction date  X2 house age  \\\n",
-       "0           0   1          2012.916667          32.0   \n",
-       "1           1   2          2012.916667          19.5   \n",
-       "2           2   3          2013.583333          13.3   \n",
-       "3           3   4          2013.500000          13.3   \n",
-       "4           4   5          2012.833333           5.0   \n",
+       "    Unnamed: 0  No  X1 transaction date  X2 house age  \\\n",
+       "0            0   1          2012.916667          32.0   \n",
+       "1            1   2          2012.916667          19.5   \n",
+       "2            2   3          2013.583333          13.3   \n",
+       "3            3   4          2013.500000          13.3   \n",
+       "4            4   5          2012.833333           5.0   \n",
+       "5            5   6          2012.666667           7.1   \n",
+       "6            6   7          2012.666667          34.5   \n",
+       "7            7   8          2013.416667          20.3   \n",
+       "8            8   9          2013.500000          31.7   \n",
+       "9            9  10          2013.416667          17.9   \n",
+       "10          10  11          2013.083333          34.8   \n",
+       "11          11  12          2013.333333           6.3   \n",
+       "12          12  13          2012.916667          13.0   \n",
+       "13          13  14          2012.666667          20.4   \n",
+       "14          14  15          2013.500000          13.2   \n",
+       "15          15  16          2013.583333          35.7   \n",
+       "16          16  17          2013.250000           0.0   \n",
+       "17          17  18          2012.750000          17.7   \n",
+       "18          18  19          2013.416667          16.9   \n",
+       "19          19  20          2012.666667           1.5   \n",
        "\n",
-       "   X3 distance to the nearest MRT station  X4 number of convenience stores  \\\n",
-       "0                                84.87882                               10   \n",
-       "1                               306.59470                                9   \n",
-       "2                               561.98450                                5   \n",
-       "3                               561.98450                                5   \n",
-       "4                               390.56840                                5   \n",
+       "    X3 distance to the nearest MRT station  X4 number of convenience stores  \\\n",
+       "0                                 84.87882                               10   \n",
+       "1                                306.59470                                9   \n",
+       "2                                561.98450                                5   \n",
+       "3                                561.98450                                5   \n",
+       "4                                390.56840                                5   \n",
+       "5                               2175.03000                                3   \n",
+       "6                                623.47310                                7   \n",
+       "7                                287.60250                                6   \n",
+       "8                               5512.03800                                1   \n",
+       "9                               1783.18000                                3   \n",
+       "10                               405.21340                                1   \n",
+       "11                                90.45606                                9   \n",
+       "12                               492.23130                                5   \n",
+       "13                              2469.64500                                4   \n",
+       "14                              1164.83800                                4   \n",
+       "15                               579.20830                                2   \n",
+       "16                               292.99780                                6   \n",
+       "17                               350.85150                                1   \n",
+       "18                               368.13630                                8   \n",
+       "19                                23.38284                                7   \n",
        "\n",
-       "   X5 latitude  X6 longitude  Y house price of unit area  \n",
-       "0     24.98298     121.54024                        37.9  \n",
-       "1     24.98034     121.53951                        42.2  \n",
-       "2     24.98746     121.54391                        47.3  \n",
-       "3     24.98746     121.54391                        54.8  \n",
-       "4     24.97937     121.54245                        43.1  "
+       "    X5 latitude  X6 longitude  Y house price of unit area  \n",
+       "0      24.98298     121.54024                        37.9  \n",
+       "1      24.98034     121.53951                        42.2  \n",
+       "2      24.98746     121.54391                        47.3  \n",
+       "3      24.98746     121.54391                        54.8  \n",
+       "4      24.97937     121.54245                        43.1  \n",
+       "5      24.96305     121.51254                        32.1  \n",
+       "6      24.97933     121.53642                        40.3  \n",
+       "7      24.98042     121.54228                        46.7  \n",
+       "8      24.95095     121.48458                        18.8  \n",
+       "9      24.96731     121.51486                        22.1  \n",
+       "10     24.97349     121.53372                        41.4  \n",
+       "11     24.97433     121.54310                        58.1  \n",
+       "12     24.96515     121.53737                        39.3  \n",
+       "13     24.96108     121.51046                        23.8  \n",
+       "14     24.99156     121.53406                        34.3  \n",
+       "15     24.98240     121.54619                        50.5  \n",
+       "16     24.97744     121.54458                        70.1  \n",
+       "17     24.97544     121.53119                        37.4  \n",
+       "18     24.96750     121.54451                        42.3  \n",
+       "19     24.96772     121.54102                        47.7  "
       ]
      },
      "execution_count": 2,
@@ -143,7 +368,7 @@
    ],
    "source": [
     "df = pd.read_csv(\"../Oblig1/realestate.csv\")\n",
-    "df.head()"
+    "df.head(20)"
    ]
   }
  ],
