--- a/Oblig1/realestate.ipynb
+++ b/Oblig1/realestate.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2bcf668d",
+   "metadata": {},
+   "source": [
+    "I forhold til utdyping av forklaring av kode, samt valg av metodik så legger jeg en markdown seksjon under den akkutelle kode seksjonen, i noen tillfeller vi også denne kunne forklare flere ovenforliggende kode seksjoner der hvor det er mest hensiksmessig."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "72f809ab",
