--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -5,12 +5,12 @@
    "id": "8b760138",
    "metadata": {},
    "source": [
-    "I forhold til utdyping av forklaring av kode, samt valg av metodik så legger jeg en markdown seksjon under den akkutelle kode seksjonen, i noen tillfeller vi også denne kunne forklare flere ovenforliggende kode seksjoner der hvor det er mest hensiksmessig."
+    "I forhold til utdyping av forklaring av kode, samt valg av metodik så legger jeg en markdown seksjon under den akkutelle kode seksjonen, i noen tillfeller vil jeg legge denne forklarende seksjonen slik at den forklarer flere ovenforliggende kode seksjoner der hvor det er mest hensiksmessig."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "fbd3f84e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "73dedc1a",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,11 +536,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6b20eaf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 569 entries, 0 to 568\n",
+      "Data columns (total 32 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   0       569 non-null    int64  \n",
+      " 1   1       569 non-null    object \n",
+      " 2   2       569 non-null    float64\n",
+      " 3   3       569 non-null    float64\n",
+      " 4   4       569 non-null    float64\n",
+      " 5   5       569 non-null    float64\n",
+      " 6   6       569 non-null    float64\n",
+      " 7   7       569 non-null    float64\n",
+      " 8   8       569 non-null    float64\n",
+      " 9   9       569 non-null    float64\n",
+      " 10  10      569 non-null    float64\n",
+      " 11  11      569 non-null    float64\n",
+      " 12  12      569 non-null    float64\n",
+      " 13  13      569 non-null    float64\n",
+      " 14  14      569 non-null    float64\n",
+      " 15  15      569 non-null    float64\n",
+      " 16  16      569 non-null    float64\n",
+      " 17  17      569 non-null    float64\n",
+      " 18  18      569 non-null    float64\n",
+      " 19  19      569 non-null    float64\n",
+      " 20  20      569 non-null    float64\n",
+      " 21  21      569 non-null    float64\n",
+      " 22  22      569 non-null    float64\n",
+      " 23  23      569 non-null    float64\n",
+      " 24  24      569 non-null    float64\n",
+      " 25  25      569 non-null    float64\n",
+      " 26  26      569 non-null    float64\n",
+      " 27  27      569 non-null    float64\n",
+      " 28  28      569 non-null    float64\n",
+      " 29  29      569 non-null    float64\n",
+      " 30  30      569 non-null    float64\n",
+      " 31  31      569 non-null    float64\n",
+      "dtypes: float64(30), int64(1), object(1)\n",
+      "memory usage: 142.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_df.info()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "aae77ae8",
    "metadata": {},
    "source": [
-    "Ut i fra beskrivelsen til datasetet så er kollone 0 en id verdi, kollone 1 er target verdien med M for malignet og B for benine og de resterende kollonene er features og ut i fra en enkel analyse av datasetet ser disse ut til å hvere normalfordelte tallverdier."
+    "Ut i fra beskrivelsen til datasetet er hensikten å analysere forskjellige features for å estimere om disse predikere en malignant kreft utvikling eller en benign kreft utvikling. Datasetet består av en id kollone (index 0), en target verdi (index 1) som enten er M for malignet eller B for benign og de resterende kollonene er features. Alle features verdiene ser ut til å være normalfordelte float verdier."
    ]
   },
   {
@@ -761,7 +817,7 @@
    "id": "e6a790f4",
    "metadata": {},
    "source": [
-    "Før vi bruker datasete videre konvertere vi verdiene i target kollonen til 1 for M og 0 for B, slik at disse er på et format som kan brukes senere. Videre legger vi disse verdiene i en ny kollone \"target\", slik at vi letter kan bruke generelle funksjoner for splitting av datasetet. Siden verdiene for ID kollonen og den gamle kollonen for target verdiene ikke har noe videre nytteverdi, så dropper vi disse dra datasetet.\n",
+    "Før vi bruker datasete videre må vi konvertere verdiene i target kollonen slik at disse kan brukes med de verktøyene vi ønsker å bruke. Jeg har gjort dette ved å konvertere verdien M til 1 og B til 0. Videre har jeg lagt disse verdiene i en ny kollone \"target\", slik at det letter kan brukes generelle funksjoner for splitting av datasetet. Siden verdiene for ID kollonen og den gamle kollonen for target verdiene ikke har noe videre nytteverdi, så dropper vi disse dra datasetet.\n",
     "\n",
     "ref for np.where: https://www.geeksforgeeks.org/numpy/numpy-where-in-python/"
    ]
