--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fbd3f84e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "73dedc1a",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "cd6945e6",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "6b20eaf3",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
    "id": "aae77ae8",
    "metadata": {},
    "source": [
-    "Ut i fra beskrivelsen til datasetet er hensikten å analysere forskjellige features for å estimere om disse predikere en malignant kreft utvikling eller en benign kreft utvikling. Datasetet består av en id kollone (index 0), en target verdi (index 1) som enten er M for malignet eller B for benign og de resterende kollonene er features. Alle features verdiene ser ut til å være normalfordelte float verdier."
+    "Ut i fra beskrivelsen til datasetet er hensikten å analysere forskjellige features for for å se om vi kan lage en modell predikere om en sulst er malignant (M) eller benign (B). Datasetet består av en id kollone (index 0), en target verdi (index 1) som enten er M eller B og de resterende kollonene er features. Alle features verdiene ser ut til å være normalfordelte float verdier. Det vil derfor være hensiktsmessig å bruke stratified sampling på dette datasette slik at vi oppnår en tilnærmet lik fordeling for target variablen mellom de forskjellige datasettene vi deler opp i. Videre vil det være hensikts messig å bruke en naive bayes modell for normalfordelte data og jeg kommer derfor til å bruke GaussianNB for naive bayes delen av analysen."
    ]
   },
   {
@@ -817,7 +817,7 @@
    "id": "e6a790f4",
    "metadata": {},
    "source": [
-    "Før vi bruker datasete videre må vi konvertere verdiene i target kollonen slik at disse kan brukes med de verktøyene vi ønsker å bruke. Jeg har gjort dette ved å konvertere verdien M til 1 og B til 0. Videre har jeg lagt disse verdiene i en ny kollone \"target\", slik at det letter kan brukes generelle funksjoner for splitting av datasetet. Siden verdiene for ID kollonen og den gamle kollonen for target verdiene ikke har noe videre nytteverdi, så dropper vi disse dra datasetet.\n",
+    "Før vi bruker datasete videre må vi konvertere verdiene i target kollonen slik at disse kan brukes med de verktøyene vi ønsker å bruke. Jeg har gjort dette ved å bruke numpy.where() fuksjonen til å konvertere verdien M til 1 og B til 0. Videre har jeg lagt disse verdiene i en ny kollone \"target\", slik at det letter kan brukes generelle funksjoner for splitting av datasetet. Siden verdiene for ID kollonen og den gamle kollonen for target verdiene ikke har noe videre nytteverdi, så dropper vi disse fra datasetet.\n",
     "\n",
     "ref for np.where: https://www.geeksforgeeks.org/numpy/numpy-where-in-python/"
    ]
@@ -866,16 +866,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6a62298a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "target\n",
+      "0    0.625731\n",
+      "1    0.374269\n",
+      "Name: count, dtype: float64\n",
+      "target\n",
+      "0    0.631579\n",
+      "1    0.368421\n",
+      "Name: count, dtype: float64\n",
+      "target\n",
+      "0    0.628319\n",
+      "1    0.371681\n",
+      "Name: count, dtype: float64\n",
+      "**********\n",
+      "0.6010544815465729\n",
+      "0.20035149384885764\n",
+      "0.19859402460456943\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_dataset = split_dataset(df)\n",
+    "check_split_dataset(test_dataset)\n",
+    "print('**********')\n",
+    "print(test_dataset[0].shape[0]/df.target.shape[0])\n",
+    "print(test_dataset[1].shape[0]/df.target.shape[0])\n",
+    "print(test_dataset[2].shape[0]/df.target.shape[0])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "655f4e24",
    "metadata": {},
    "source": [
-    "Jeg har valgt å bruke stratified sampling med grupering på target kollonen slik at det oppnås en tilnærmet lik fordeling for utfallet av target hendelsen mellom de forskjellige delene av datasetet. Videre har jeg delt opp datasetet i 60, 20, 20 % split for henholdsvis training, validation og testing, slik at jeg får en god fordeling mellom dataene for trening, validering og testing. Ut ifra størelsen på dette datasette mener jeg dette gir en grei balanse mellom nok data til trening av modellen, men samtidig en god mengde data til opptimalisering og testing av modellen. Hvis datasetet hadde vært av betydelig mindre størelse kunne det vært lurt å tildele en større andel av det totale datasetet til trening av modellen for å få en modell som kan høyde for en større spredning av tilfeller."
+    "Som nevn tidligere jeg har valgt å bruke stratified sampling med grupering på target kollonen slik at det oppnås en tilnærmet lik fordeling for utfallet av target hendelsen mellom de forskjellige delene av datasetet. Videre har jeg delt opp datasetet i 60, 20, 20 % split for henholdsvis training, validation og testing, slik at jeg får en god fordeling mellom dataene for trening, validering og testing. Ut ifra størelsen på datasette og typen target variabel det inneholder mener jeg dette gir en grei balanse mellom nok data til trening av modellen, men samtidig en god mengde data til opptimalisering og testing av modellen."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "15413364",
    "metadata": {},
    "outputs": [],
@@ -952,12 +990,14 @@
    "id": "a2861fa2",
    "metadata": {},
    "source": [
-    "For funksjonene jeg har laget for trening, tuning og testing av modellen så har jeg valgt å legg inn løkker, slik at validering og testing kan kjøres flere gang med ny oppdeling av datasetet hver gang disse løkkene starter på en ny loop. Dette er gjort for å oppnå mindre variasjon i resultatene ved både validering av tuningen, samt testing av slutt resultatet slik at disse har større grad av pålitelighet. Jeg har også lagt inn mulighet for å velg antall ganger løkkene skal kjøres."
+    "For funksjonene jeg har laget for trening, tuning og testing av modellen så har jeg valgt å legg inn løkker, slik at validering og testing kan kjøres flere gang med ny oppdeling av datasetet hver gang disse løkkene starter på en ny loop. Dette er gjort for å oppnå mindre variasjon i resultatene ved både validering av tuningen, samt testing av slutt resultatet slik at disse har større grad av pålitelighet. Jeg har også lagt inn mulighet for å velg antall ganger løkkene skal kjøres.\n",
+    "\n",
+    "Videre er det gjennomsnittet av resultatene fra alle kjøringene i løkkene som skrive ut sammen med standardavik, slik at dette gir et bedre bilde av variasjonen som oppstår pga. den randomiserte oppdeling av datasettet ved bruk av løkkene i testingen. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "74c20907",
    "metadata": {},
    "outputs": [
@@ -975,7 +1015,7 @@
       "Validation results:\n",
       "Accuracy: 0.92 +- 0.02\n",
       "Precision: 0.89 +- 0.05\n",
-      "Recall: 0.90 +- 0.05\n",
+      "Recall: 0.91 +- 0.05\n",
       "F1: 0.90 +- 0.03\n",
       "ROCAUC: 0.92 +- 0.03\n"
      ]
@@ -991,7 +1031,12 @@
    "id": "a55cc24c",
    "metadata": {},
    "source": [
-    "Først kjører vi en validering på den defaulte modellen for å få oss en baseline vi kan sammenligne med."
+    "Før hyperparameter tuning av modellen kjører vi en validering defaulte instillinger for å få oss en baseline vi kan sammenligne med. Når vi ser på de første resultatene ser vi at trenings delen av resultatene gir full utelling på alle test variablene vi har satt opp, mens det for validerings delen ikke gir like gode resultater. Dette forteller oss at modellen har et problem med overfit i forhold til trenings delen av datasette som dermed gir en dårligere gennerell overføring verdi av modellen. Det er derfor ønskelig å tune modellen for å prøve å oppnå en bedre generell overføringsverdi av modellen.\n",
+    "\n",
+    "I forhold til tuning av modellen har jeg valg å bruke max_depth, min_samples_leaf og min_samples_split. Grunnen til at jeg har valg disse tuning parameterene er at disse gir oss en god mulighet til redusere eventuell overfitting og derfor gjøre slik at modellen er mer genereliset overførbar til andre data en det den er trent på. \n",
+    "For max_depth skjer dette ved å begrese maks dybden treet til modellen kan ha og derfor begresen muligheten modellen har til å tilpasse seg spesille utliggere eller edge caser. For min_samples_leaf skjer dette ved å spesifisere minimums antallet av verdier/hendelser som en bladnode kan inneholde og dermed kan du begrense muligheten til modellen å innehold bladnode med veldig få verdier. Vidre for min_samples_split så tunes modellen ved å sette en begrensning på antall verdier en node må innehold for å kunne splites, dette gjør dermed at du kan unngå oppdeling av noder som innehold få verdier. \n",
+    "\n",
+    "ref: https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html"
    ]
   },
   {
