--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -1031,12 +1031,35 @@
    "id": "a55cc24c",
    "metadata": {},
    "source": [
-    "Før hyperparameter tuning av modellen kjører vi en validering defaulte instillinger for å få oss en baseline vi kan sammenligne med. Når vi ser på de første resultatene ser vi at trenings delen av resultatene gir full utelling på alle test variablene vi har satt opp, mens det for validerings delen ikke gir like gode resultater. Dette forteller oss at modellen har et problem med overfit i forhold til trenings delen av datasette som dermed gir en dårligere gennerell overføring verdi av modellen. Det er derfor ønskelig å tune modellen for å prøve å oppnå en bedre generell overføringsverdi av modellen.\n",
+    "For å vurdere modellen underveis i trenings og validerings prossesen har jeg valgt å bruke følgende målinger, accuracy, precision, recall, f1_score og roc_auc_score.\n",
+    "\n",
+    "Accuracy er et mål på hvor treffsiker modellen er og vurderes ved å sette antalle riktige prediksjoner opp mot det totale antallet av prediksjoner.\n",
+    "\n",
+    "Precision er et mål hvor presis modellen er til å predikere \"positive\" utfall, dette vurderes ved å sett antall riktige \"positive\" prediksjoner opp mot totalen av \"positive\" prediksjoner.\n",
+    "\n",
+    "Recall er et mål på hvor god modellen er til å finne alle \"positive\" utfall, dette vurderes ved å sette antall riktige \"positive\" prediksjoner opp mot totalen av antall riktig \"positive\" prediksjon pluss antallet falske \"negavtive\" prediksjoner.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Før hyperparameter tuning av modellen kjører vi en validering defaulte instillinger for å få oss en baseline vi kan sammenligne med. Når vi ser på de første resultatene ser vi at trenings delen av resultatene gir full utelling på alle test variablene vi har satt opp, mens det for validerings delen ikke gir like gode resultater. Dette forteller oss at modellen har et problem med overfiting i forhold til trenings delen av datasette som dermed gir en dårligere gennerell overføringsverdi av modellen. Det er derfor ønskelig å tune modellen for å prøve å oppnå en bedre generell overføringsverdi av modellen.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "I forhold til tuning av modellen har jeg valg å bruke max_depth, min_samples_leaf og min_samples_split. Grunnen til at jeg har valg disse tuning parameterene er at disse gir oss en god mulighet til redusere eventuell overfitting og derfor gjøre slik at modellen er mer genereliset overførbar til andre data en det den er trent på. \n",
-    "For max_depth skjer dette ved å begrese maks dybden treet til modellen kan ha og derfor begresen muligheten modellen har til å tilpasse seg spesille utliggere eller edge caser. For min_samples_leaf skjer dette ved å spesifisere minimums antallet av verdier/hendelser som en bladnode kan inneholde og dermed kan du begrense muligheten til modellen å innehold bladnode med veldig få verdier. Vidre for min_samples_split så tunes modellen ved å sette en begrensning på antall verdier en node må innehold for å kunne splites, dette gjør dermed at du kan unngå oppdeling av noder som innehold få verdier. \n",
+    "For max_depth skjer dette ved å begrese maks dybden treet til modellen kan ha og derfor begresen muligheten modellen har til å tilpasse seg spesille utliggere eller edge caser. For min_samples_leaf skjer dette ved å spesifisere minimums antallet av verdier/hendelser som en bladnode kan inneholde og dermed kan du begrense muligheten til modellen å innehold bladnode med veldig få verdier. Vidre for min_samples_split så tunes modellen ved å sette en begrensning på antall verdier en node må innehold for å kunne splites, dette gjør dermed at du kan unngå oppdeling av noder som innehold få verdier.\n",
     "\n",
-    "ref: https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html"
+    "I forhold til vurdering av modellen\n",
+    "\n",
+    "En roc_auc score er et mål på total arealet under en roc kurve og gir deg en indikator på hvor bra en modellen er til å predikere riktige \"positive\" utfall. En verdi på 1.0 indikere at modellen gir 100% riktig prediksjon for \"positive\" utfall, mens en verdi på 0.5 tilsvarer at modellen ikke er mer riktig en tilfelig gjetning.\n",
+    "\n",
+    "ref (tuning parameter): https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html\n",
+    "\n",
+    "\n",
+    "ref (recall):\n",
+    "ref (f1):\n",
+    "ref (roc_auc): https://en.wikipedia.org/wiki/Receiver_operating_characteristic#Area_under_the_curve"
    ]
   },
   {
