--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -1039,7 +1039,9 @@
     "\n",
     "Recall er et mål på hvor god modellen er til å finne alle \"positive\" utfall, dette vurderes ved å sette antall riktige \"positive\" prediksjoner opp mot totalen av antall riktig \"positive\" prediksjon pluss antallet falske \"negavtive\" prediksjoner.\n",
     "\n",
+    "f1_score er et mål på balansen mellom precision og recall og gir deg dermed et mål på hvor balanser modellen er på å være presis i sine prediksjoner, men samtidig oppdage/predikere så mange som mulig \"positive\" utfall.\n",
     "\n",
+    "roc_auc_score\n",
     "\n",
     "Før hyperparameter tuning av modellen kjører vi en validering defaulte instillinger for å få oss en baseline vi kan sammenligne med. Når vi ser på de første resultatene ser vi at trenings delen av resultatene gir full utelling på alle test variablene vi har satt opp, mens det for validerings delen ikke gir like gode resultater. Dette forteller oss at modellen har et problem med overfiting i forhold til trenings delen av datasette som dermed gir en dårligere gennerell overføringsverdi av modellen. Det er derfor ønskelig å tune modellen for å prøve å oppnå en bedre generell overføringsverdi av modellen.\n",
     "\n",
