--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fbd3f84e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "73dedc1a",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "cd6945e6",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b55411b9",
    "metadata": {},
    "outputs": [
@@ -800,7 +800,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "da9e5e94",
    "metadata": {},
    "outputs": [],
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "15413364",
    "metadata": {},
    "outputs": [],
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "74c20907",
    "metadata": {},
    "outputs": [
@@ -1026,10 +1026,10 @@
       "ROCAUC: 1.00 +- 0.00\n",
       "************************\n",
       "Validation results:\n",
-      "Accuracy: 0.92 +- 0.02\n",
+      "Accuracy: 0.92 +- 0.03\n",
       "Precision: 0.89 +- 0.05\n",
       "Recall: 0.91 +- 0.05\n",
-      "F1: 0.90 +- 0.03\n",
+      "F1: 0.90 +- 0.04\n",
       "ROCAUC: 0.92 +- 0.03\n"
      ]
     }
@@ -1044,7 +1044,7 @@
    "id": "a55cc24c",
    "metadata": {},
    "source": [
-    "Før hyperparameter tuning av modellen kjører vi en validering defaulte instillinger for å få oss en baseline vi kan sammenligne med. Når vi ser på de første resultatene ser vi at trenings delen av resultatene gir full utelling på alle test variablene vi har satt opp, mens det for validerings delen ikke gir like gode resultater. Dette forteller oss at modellen har et problem med overfiting i forhold til trenings delen av datasette som dermed gir en dårligere gennerell overføringsverdi av modellen. Det er derfor ønskelig å tune modellen for å prøve å oppnå en bedre generell overføringsverdi av modellen.\n",
+    "Før hyperparameter tuning av DecisionTreeClassifier modellen kjører vi en validering med defaulte instillinger for å få oss en baseline vi kan sammenligne med. Når vi ser på de første resultatene ser vi at trenings delen av resultatene gir full utelling på alle test variablene vi har satt opp, mens det for validerings delen ikke gir like gode resultater. Dette forteller oss at modellen har et problem med overfiting i forhold til trenings delen av datasette som dermed gir en dårligere gennerell overføringsverdi av modellen. Det er derfor ønskelig å tune modellen for å prøve å oppnå en bedre generell overføringsverdi og mindre overfiting av modellen [4].\n",
     "\n",
     "I forhold til tuning av modellen har jeg valg å bruke max_depth, min_samples_leaf og min_samples_split. Grunnen til at jeg har valg disse tuning parameterene er at disse gir oss en god mulighet til redusere eventuell overfitting og derfor gjøre slik at modellen er mer genereliset overførbar til andre data en det den er trent på. \n",
     "For max_depth skjer dette ved å begrese maks dybden treet til modellen kan ha og derfor begresen muligheten modellen har til å tilpasse seg spesille utliggere eller edge caser. For min_samples_leaf skjer dette ved å spesifisere minimums antallet av verdier/hendelser som en bladnode kan inneholde og dermed kan du begrense muligheten til modellen å innehold bladnode med veldig få verdier. Vidre for min_samples_split så tunes modellen ved å sette en begrensning på antall verdier en node må innehold for å kunne splites, dette gjør dermed at du kan unngå oppdeling av noder som innehold få verdier [4].\n",
@@ -1581,6 +1581,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c4da0703",
+   "metadata": {},
+   "source": [
+    "Etter å ha gjennomført testing og validering med forskjellige verdier for parameterene jeg har valgt å bruke kom jeg fram til at versjonen \"dt10\" ga meg best resultater sammenlignet med baseline.\n",
+    "dt10 hadde følge verdier for parameterene DecisionTreeClassifier(max_depth=3, min_samples_leaf=5, min_samples_split=8).\n",
+    "\n",
+    "Når vi sammenligner resultatene (se kopi av verdiene under), så ser vi at resultatene traning delen av datasetet har blitt dårligere fra dt1 til dt10, mens validerings delen har blitt noe forbedre. Samtidig har standard aviket økt for trenings delen og blitt minimalt mindre for validerings delen av datasete. Dette tyder i utgangspunktet på at modellen i mindre grad overfiter og har fått potensiell bedre generell overføringverdi til andre dataset. Det er imidlertid viktig å påpeke at det er en del variasjon i den randomiserte fordeling av datasete og du vil få forskjellige resultater ved repetive kjøringer av modellen, men helheten av resultatene tyder på at modellen har blit bedre med tuningen fra dt1 til dt10.\n",
+    "\n",
+    "dt1 (baseline):\n",
+    "Training results:\n",
+    "Accuracy: 1.00 +- 0.00\n",
+    "Precision: 1.00 +- 0.00\n",
+    "Recall: 1.00 +- 0.00\n",
+    "F1: 1.00 +- 0.00\n",
+    "ROCAUC: 1.00 +- 0.00\n",
+    "************************\n",
+    "Validation results:\n",
+    "Accuracy: 0.92 +- 0.03\n",
+    "Precision: 0.89 +- 0.05\n",
+    "Recall: 0.91 +- 0.05\n",
+    "F1: 0.90 +- 0.04\n",
+    "ROCAUC: 0.92 +- 0.03\n",
+    "\n",
+    "dt10:\n",
+    "Training results:\n",
+    "Accuracy: 0.97 +- 0.01\n",
+    "Precision: 0.98 +- 0.02\n",
+    "Recall: 0.93 +- 0.02\n",
+    "F1: 0.95 +- 0.01\n",
+    "ROCAUC: 0.96 +- 0.01\n",
+    "************************\n",
+    "Validation results:\n",
+    "Accuracy: 0.94 +- 0.02\n",
+    "Precision: 0.93 +- 0.04\n",
+    "Recall: 0.90 +- 0.05\n",
+    "F1: 0.91 +- 0.03\n",
+    "ROCAUC: 0.93 +- 0.03\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c3433440",
@@ -1736,6 +1779,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "70bc055c",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "id": "1806682b",
@@ -1820,7 +1869,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
