--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -1585,10 +1585,11 @@
    "id": "c4da0703",
    "metadata": {},
    "source": [
-    "Etter å ha gjennomført testing og validering med forskjellige verdier for parameterene jeg har valgt å bruke kom jeg fram til at versjonen \"dt10\" ga meg best resultater sammenlignet med baseline.\n",
-    "dt10 hadde følge verdier for parameterene DecisionTreeClassifier(max_depth=3, min_samples_leaf=5, min_samples_split=8).\n",
+    "Etter å ha gjennomført testing og validering med forskjellige verdier for parameterene jeg har valgt å bruke kom jeg fram til at versjonen \"dt10\" ga meg best resultater sammenlignet med baseline og det er dermed denne jeg kommer til å sammeligne opp mot GaussianNB for naive bayes modellen. dt10 hadde følge verdier for parameterene DecisionTreeClassifier(max_depth=3, min_samples_leaf=5, min_samples_split=8).\n",
     "\n",
-    "Når vi sammenligner resultatene (se kopi av verdiene under), så ser vi at resultatene traning delen av datasetet har blitt dårligere fra dt1 til dt10, mens validerings delen har blitt noe forbedre. Samtidig har standard aviket økt for trenings delen og blitt minimalt mindre for validerings delen av datasete. Dette tyder i utgangspunktet på at modellen i mindre grad overfiter og har fått potensiell bedre generell overføringverdi til andre dataset. Det er imidlertid viktig å påpeke at det er en del variasjon i den randomiserte fordeling av datasete og du vil få forskjellige resultater ved repetive kjøringer av modellen, men helheten av resultatene tyder på at modellen har blit bedre med tuningen fra dt1 til dt10.\n",
+    "Når vi sammenligner resultatene (se kopi av verdiene under), så ser vi at resultatene traning delen av datasetet har blitt dårligere fra dt1 til dt10, mens validerings delen har blitt noe forbedre. Samtidig har standard aviket økt for trenings delen og blitt minimalt mindre for validerings delen av datasete. Dette tyder i utgangspunktet på at modellen i mindre grad overfiter og har fått potensiell bedre generell overføringverdi til andre dataset. Det er imidlertid viktig å påpeke at det er en del variasjon i den randomiserte fordeling av datasete og du vil få forskjellige resultater ved repetive kjøringer av modellen, men helheten av resultatene tyder på at modellen har blitt bedre med tuningen fra dt1 til dt10.\n",
+    "\n",
+    "Når vi sammenligner de individuelle verdiene så ser vi at alle målene har blitt forbedret for validerings delen fra dt1 til dt10 bortsett fra for recall hvor det var en liten nedgang fra 0.91 til 0.90. Dette betyr i utgangspunktet at modellen har blitt bedre i mere presis i sine prediksjon, men litt dårligere til finne flest mulig ekte \"postive\" utfall. I denne tilfellet vil jeg alikvel si at den tunede modellen er totaltsett bedre.\n",
     "\n",
     "dt1 (baseline):\n",
     "Training results:\n",
@@ -1625,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c3433440",
    "metadata": {},
    "outputs": [
@@ -1642,10 +1643,10 @@
       "************************\n",
       "Validation results:\n",
       "Accuracy: 0.94 +- 0.02\n",
-      "Precision: 0.95 +- 0.04\n",
-      "Recall: 0.88 +- 0.04\n",
-      "F1: 0.91 +- 0.02\n",
-      "ROCAUC: 0.92 +- 0.02\n"
+      "Precision: 0.94 +- 0.04\n",
+      "Recall: 0.89 +- 0.05\n",
+      "F1: 0.91 +- 0.03\n",
+      "ROCAUC: 0.93 +- 0.03\n"
      ]
     }
    ],
@@ -1655,8 +1656,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "61e19b64",
+   "metadata": {},
+   "source": [
+    "Akkurat som for DecisionTreeClassifier kjører vi først en kjøring med baseline tuning verdier for GaussianNB, slik at vi har et utgangspunkt å sammenligne med. Når vi ser på resultatene av baseline kjøringen for GaussianNB, så ser vi at det er veldig liten forskjell i resultatene for måleverdiene, men det noe større standard avik. Dette tyder på at modellen mindre problemer med overfiting uten tuning av modellen og derfor vil ha bedre generell overføringsverdi.\n",
+    "\n",
+    "skriv om tuning av modellen\n",
+    "\n",
+    "\n",
+    "ref:\n",
+    "[5] \"https://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.GaussianNB.html\", lest 20.09.25"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "3658d3a4",
    "metadata": {},
    "outputs": [
@@ -1674,8 +1689,8 @@
       "Validation results:\n",
       "Accuracy: 0.93 +- 0.02\n",
       "Precision: 0.95 +- 0.03\n",
-      "Recall: 0.86 +- 0.05\n",
-      "F1: 0.90 +- 0.03\n",
+      "Recall: 0.86 +- 0.06\n",
+      "F1: 0.90 +- 0.04\n",
       "ROCAUC: 0.92 +- 0.03\n"
      ]
     }
